# floodlens

./: .gitignore  HANDOFF.md  PROJECT_STATUS.md  README.md
api/: .gitignore  README.md  requirements.txt
api/app/: __init__.py  main.py  predictor.py  samples.py  schemas.py
demo/: README.md  app.py  requirements.txt
demo_static/: README.md  app.js  index.html
demo_static/model/: tiny_unet_diverse.onnx
docs/: implementation_plan.md  ml_math_explained.md  research_summary.md
docs/assets/: results_snapshot.md
ml/: README.md  pyproject.toml  requirements.txt  smoke_test.py
ml/space_mapper/: __init__.py  datasets.py  inference.py  io.py  losses.py  metrics.py
ml/space_mapper/cli/: __init__.py  evaluate_predictions.py  predict_sample.py  prepare_sample_manifest.py  train_baseline.py
scripts/: download_sen1floods11_subset.ps1  export_onnx.py  install_ml.ps1  make_comparison.py  package_space.ps1  run_api.ps1  run_pipeline.py  run_web.ps1  smoke_check.ps1
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
